Added Angular and created home page view
